移植自适应存储 Tick 服务到 1.12.2 / Port adaptive storage tick service to 1.12.2